# ppass

./: .gitignore  .ppassrc.template  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
ppass/: __init__.py  cli.py  config.py  watcher.py
ppass/core/: __init__.py  activity.py  pass_wrapper.py  runtime.py  volume.py
ppass/platform/: __init__.py  base.py  linux.py  macos.py  veracrypt.py  windows.py
scripts/: test_veracrypt_linux.sh
tests/: test_activity.py  test_cli.py  test_config.py  test_integration.py  test_pass_wrapper.py  test_platform.py  test_runtime.py  test_volume.py  test_watcher.py
